docs/impossibletriangles/presentation.css
/* text */

.slideTextItem{
    opacity: 0;
	transition: opacity 0.5s ease-in-out;

    grid-row-start: 1;
    grid-column-start: 1;

    width:100%;
    max-width: 800px;
    line-height: 1.1; /* give room for equations */
    margin: 0 auto;
    font-family: "Poppins",Arial,Helvetica,sans-serif;
    margin-bottom: 2.5em; /*dodge the next/back arrows */
    padding: 0.5em 1.5em;
}

.nextChapterLink{
    position:absolute;
    bottom:0.5em;
    right:1em;
    font-weight:bold;
    text-decoration:underline;
    background-color: rgba(255,255,255,0.5);
    padding: 0.25em;
}

.exp-toptext{
    will-change: opacity; /* hint to chrome that this should be composited in its own layer */
}

@font-face {
    font-family: "Poppins";
    src: url('../resources/fonts/Poppins-Regular.ttf') format('truetype');
}
@font-face {
    font-family: "Poppins";
    src: url('../resources/fonts/Poppins-SemiBold.ttf') format('truetype');
    font-weight: bold;
}
@font-face {
    font-family: "Poppins";
    src: url('../resources/fonts/Poppins-Italic.ttf') format('truetype');
    font-weight: normal;
    font-style: italic;
}
@font-face {
    font-family: "Poppins";
    src: url('../resources/fonts/Poppins-SemiBoldItalic.ttf') format('truetype');
    font-weight: bold;
    font-style: italic;
}

.tunnell-container{
  grid-template-columns: 1fr 1fr;
}

.tunnell-column{
    padding-left: 5% !important;
    padding-right: 5% !important;
}

.tunnell-linebelow{
    border-bottom: 1px solid gray;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 1em;
}

.katexlabel{
    position: absolute;
    top: 0px;
    left: 0px;
    will-change: transform; /* hint to chrome that this should be composited in its own layer */
    transform: translate(-50%, -50%);
    font-size: 22px;
    pointer-events: none;
}

.overlappingItemContainer{
  display: grid;
  grid-template-columns: 1fr;
 width:100%;
}

.textContainer{
  display: grid;
  grid-template-columns: 1fr;
}

.nextbtn{
    pointer-events:all;
    position:absolute;
    bottom:0.5em;
    right:0.5em;
    font-weight:bold;
    text-decoration:underline;
}


.slideTextItem br{
    margin-bottom: 0.75em;
}
.slideTextItem aside{
    display: inline;
    font-size: 80%;
    opacity: 0.8;
}


html{
    overflow-y: hidden !important; /* hide weird second scrollbar on chrome */
}

.grid{
    width: 100%;
    height: 100%;
    position:absolute;
}



.headerPart{
    width: 100%;
    /*height: 3%;*/
    /*background-color: red;*/
}

.threeDPart{
    height: 62%;
    width: 100%;
    /*background-color: green;*/
    min-height: 2;
    position:relative;
    overflow: hidden; /* I'm not sure about this. disabling it does get rid of a scrollbar, but that scrollbar shouldn't be there in the first place.*/
}

.non3DFooterPart{
    height: 35%;
    width: 100%;
    overflow-y: auto;
    border-top: 1px solid #ccc;
    line-height: 1.0;
    will-change: transform; /* recommended by chrome to ensure scrolling is smooth */
    font-size: 18px;
}

.canvasOverlay{
    z-index: 2;
    pointer-events: none;
    opacity: 1.0;
/* hack to position 2D canvas over 3D canvas*/
    position: absolute;
    top:0%;
    left:0%;
    right:100%;
    bottom:0%;
}   


#textArea h1{
    text-align: center;
    font-family: "Computer Modern Serif";
    font-size: 1.5em;
}

/*these may seem the same, but they're responsive differently on mobile. FullscreenShortPopup doesn't shrink when the window gets small, but fullscreenText does. */
.fullscreenShortPopup{
    font-size: 2.5em;
}
.fullscreenText{
    font-size: 2.5em;
}

.fullscreenText, .fullscreenShortPopup{
    background-color: rgba(255,255,255,0.8);
    pointer-events: none;
    font-family: "Computer Modern Serif";
    margin: 0;
    padding: 1em;
    width:100%;
    top: 0%;
    z-index: 1;
}

.coverBG{
    background-color: rgba(255,255,255,0.9);
    z-index: 1;
}

.fullscreenText h1, .fullscreenShortPopup h1, .threeDPartHeader h1
{
    font-size: 150%;
    text-align: center;  
}
.fullscreenText .columns{
    line-height: 1.2; 
}

.fullscreenText aside, .fullscreenShortPopup aside, .threeDPartHeader aside{
    font-size: 70%;
}

.willFadeInFromJS{
    opacity:0; 
    transition: opacity 0.75s ease-in-out;
}
.willFadeOutFromJS{
    opacity:1; 
    transition: opacity 0.75s ease-in-out;
}
/* used in 5 */

.relativePos{
    position: relative;
}
.absolutePos{
  position: absolute;
  top:0px;
  width:100%;
}


.threeDPartHeader{
    font-size: 1.3em;
    pointer-events: none;
    font-family: "Computer Modern Serif";
    margin: 0;
    padding: 1em;
}

/* used in bonuses */
ul {
    list-style: disc;
    padding-left: 1em;
}


@media screen and (max-height:600px){

    body{
        font-size: 12px;
    }

    .threeDPart{
        width: 60%;
        height:100%;
        float:left;
    }

    .non3DFooterPart{
        width: calc(40% - 0.25em);
        height: 100%;
        float:right;
        bottom:0%;
        border-top: none;
        border-left: 1px solid #ccc;
    }

    /* used in 3 */

    .fullscreenText{
        font-size: 1.3em;
    }

    .fullscreenShortPopup{
        font-size: 3em;
    }
   
    .threeDPartHeader{
        padding: 0.25em;
        font-size: 1em;
    }
    
}


@media screen and (max-width:600px){
    .fullscreenText{
        font-size: 1.3em;
    }

    .fullscreenShortPopup{
        font-size: 3em;
    }
    .threeDPartHeader{
        font-size: 1em;
    }
}


#canvasContainer canvas{
    width: 100%;
    height: 100%;
}

